--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ada Hoeg Portfolio</title>
+    <!-- cdns -->
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="style.css">
+    <!-- scripts -->
+    <script src="script.js" defer></script>
 </head>
 <body>
+    <!-- loading spinner -->
+    <div id="loading">
+        <div id="spinner"></div>
+    </div>
+    <header>
+        <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
+            <div id="title">yourname.</div><br>
+            <div id="links">
+                <a href="#skills">skills</a>
+                <a href="#work" style="margin:0px 60px;">works</a>
+                <a href="#contact">contact</a>
+            </div>
+        </div>
+    </header>
     
 </body>
 </html>
