--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ada Hoeg Portfolio</title>
     <!-- cdns -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
     <!-- scripts -->
     <script src="script.js" defer></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/eef06e274a.js"             crossorigin="anonymous"></script>
+
+
 </head>
 <body>
     <!-- loading spinner -->
@@ -18,14 +25,87 @@
     </div>
     <header>
         <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
-            <div id="title">yourname.</div><br>
+            <div id="title">Ada Hoeg</div><br>
             <div id="links">
                 <a href="#skills">skills</a>
-                <a href="#work" style="margin:0px 60px;">works</a>
+                <a href="#work" style="margin:0px 60px;">work</a>
                 <a href="#contact">contact</a>
             </div>
         </div>
     </header>
+
+    <main>
+        <center>
+            <div id="middle">
+                <div id="tagline" class="animated zo
+                " style="animation: delay 1.8s;">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptate officiis in quam voluptatibus reprehenderit, debitis dolore animi deserunt, quaerat porro aut veritatis autem esse asperiores! Dolor laudantium omnis repellendus.<br>
+                    <button class="btn-one">click!</button>
+                </div>
+            </div>
+        </center>
+
+        <div id="portfolio">
+            <div id="skills">
+                <h1>skills.</h1>
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, illo dolores ex quidem perspiciatis eveniet, suscipit aspernatur, hic vel quasi nemo dolorum? Nemo in voluptatem sunt animi eum dicta ducimus.
+                    </p>
+                </div>
+            </div>
+
+            <div id="work">
+                <h1>work</h1>
+
+                <div class="projects">
+                    <h2>project title 1</h2>
+                    <div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia possimus reprehenderit odit optio facere, rerum repellendus natus distinctio mollitia quos asperiores expedita commodi delectus voluptatibus quia in vel laborum numquam.
+                    </div>
+                    <button class="btn-one">live</button>
+                    <button class="btn-two">code</button>
+                </div>
+                <div class="project">
+                    <h2>project title 2</h2>
+                    <div>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente aperiam voluptates possimus molestias. Modi repudiandae at velit quis, quae accusamus nostrum necessitatibus mollitia commodi ipsa facilis, debitis odio. Doloribus, voluptas!
+                    </div>
+                    <button class="btn-one">live</button>
+                    <button class="btn-two">code</button>
+                </div>
+                    <div class="project">
+                    <h2>project title 2</h2>
+                    <div>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente aperiam voluptates possimus molestias. Modi repudiandae at velit quis, quae accusamus nostrum necessitatibus mollitia commodi ipsa facilis, debitis odio. Doloribus, voluptas!
+                    </div>
+                    <button class="btn-one">live</button>
+                    <button class="btn-two">code</button>
+                </div>
+                <div class="project">
+                    <h2>project title 2</h2>
+                    <div>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente aperiam voluptates possimus molestias. Modi
+                        repudiandae at velit quis, quae accusamus nostrum necessitatibus mollitia commodi ipsa facilis, debitis odio.
+                        Doloribus, voluptas!
+                    </div>
+                    <button class="btn-one">live</button>
+                    <button class="btn-two">code</button>
+                </div>
+            </div>
+
+            <div id="contact">
+                <h1>contact</h1>
+                <div id="details">
+                    <a class="btn_social"><i class="fab fa-linkedin"></i></a>
+                    <a class="btn_social"><i class="fab fa-github"></i></a>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        designed and developed by Ada Hoeg
+    </footer>
     
 </body>
 </html>
