added script for loading spinner. added font from google. adding CSS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- cdns -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
     <!-- scripts -->
@@ -97,8 +99,14 @@
             <div id="contact">
                 <h1>contact</h1>
                 <div id="details">
-                    <a class="btn_social"><i class="fab fa-linkedin"></i></a>
-                    <a class="btn_social"><i class="fab fa-github"></i></a>
+                <!-- github -->
+                    <a href="https://github.com/flovelace" target="_blank" rel="noopener noreferrer" class="btn-social">
+                    <i class="fa-brands fa-github fa-2xl fa-fade"
+                        style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6; color: #cecece;"></i></a>
+                <!-- github -->
+                    <a href="https://www.linkedin.com/in/adahoeg/" target="_blank" rel="noopener noreferrer" class="btn-social">
+                    <i class="fa-brands fa-linkedin fa-2xl fa-fade"
+                        style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6; color: #cecece;"></i></a>
                 </div>
             </div>
         </div>
