added more styles to sections and buttons

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div id="middle">
                 <div id="tagline" class="animated zo
                 " style="animation: delay 1.8s;">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptate officiis in quam voluptatibus reprehenderit, debitis dolore animi deserunt, quaerat porro aut veritatis autem esse asperiores! Dolor laudantium omnis repellendus.<br>
+                    Lorem, ipsum dolor sit<br>
                     <button class="btn-one">click!</button>
                 </div>
             </div>
