removed excess projects from index.html, and added more stylings to css file.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="spinner"></div>
     </div>
     <header>
-        <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
+        <div id="head" class="animated slideInDown" style="animation-delay:1.8s;">
             <div id="title">Ada Hoeg</div><br>
             <div id="links">
                 <a href="#skills">skills</a>
@@ -49,9 +49,9 @@
 
         <div id="portfolio">
             <div id="skills">
-                <h1>skills.</h1>
+                <h2>skills.</h2>
                 <div>
-                    <p>
+                    <p class="p-copy">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, illo dolores ex quidem perspiciatis eveniet, suscipit aspernatur, hic vel quasi nemo dolorum? Nemo in voluptatem sunt animi eum dicta ducimus.
                     </p>
                 </div>
@@ -63,7 +63,11 @@
                 <div class="projects">
                     <h2>project title 1</h2>
                     <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia possimus reprehenderit odit optio facere, rerum repellendus natus distinctio mollitia quos asperiores expedita commodi delectus voluptatibus quia in vel laborum numquam.
+                        <p class="p-copy">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia possimus reprehenderit odit optio facere, rerum
+                            repellendus natus distinctio mollitia quos asperiores expedita commodi delectus voluptatibus quia in vel laborum
+                            numquam.
+                        </p>
                     </div>
                     <button class="btn-one">live</button>
                     <button class="btn-two">code</button>
@@ -71,25 +75,23 @@
                 <div class="project">
                     <h2>project title 2</h2>
                     <div>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente aperiam voluptates possimus molestias. Modi repudiandae at velit quis, quae accusamus nostrum necessitatibus mollitia commodi ipsa facilis, debitis odio. Doloribus, voluptas!
+                        <p class="p-copy">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia possimus reprehenderit odit optio facere, rerum
+                            repellendus natus distinctio mollitia quos asperiores expedita commodi delectus voluptatibus quia in vel laborum
+                            numquam.
+                        </p>
                     </div>
                     <button class="btn-one">live</button>
                     <button class="btn-two">code</button>
                 </div>
                     <div class="project">
-                    <h2>project title 2</h2>
+                    <h2>project title 3</h2>
                     <div>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente aperiam voluptates possimus molestias. Modi repudiandae at velit quis, quae accusamus nostrum necessitatibus mollitia commodi ipsa facilis, debitis odio. Doloribus, voluptas!
-                    </div>
-                    <button class="btn-one">live</button>
-                    <button class="btn-two">code</button>
-                </div>
-                <div class="project">
-                    <h2>project title 2</h2>
-                    <div>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente aperiam voluptates possimus molestias. Modi
-                        repudiandae at velit quis, quae accusamus nostrum necessitatibus mollitia commodi ipsa facilis, debitis odio.
-                        Doloribus, voluptas!
+                        <p class="p-copy">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia possimus reprehenderit odit optio facere, rerum
+                            repellendus natus distinctio mollitia quos asperiores expedita commodi delectus voluptatibus quia in vel laborum
+                            numquam.
+                        </p>
                     </div>
                     <button class="btn-one">live</button>
                     <button class="btn-two">code</button>
