working on media queries

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
     <!-- scripts -->
@@ -17,8 +17,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/eef06e274a.js"             crossorigin="anonymous"></script>
-
-
 </head>
 <body>
     <!-- loading spinner -->
@@ -27,10 +25,10 @@
     </div>
     <header>
         <div id="head" class="animated slideInDown" style="animation-delay:1.8s;">
-            <div id="title">Ada Hoeg</div><br>
+            <div id="title">Ada Hoeg</div>
             <div id="links">
                 <a href="#skills">skills</a>
-                <a href="#work" style="margin:0px 60px;">work</a>
+                <a href="#work">work</a>
                 <a href="#contact">contact</a>
             </div>
         </div>
