updated title stylings. Updated middle section stylings

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ada Hoeg Portfolio</title>
+    <title>Ada Hoeg - Full Stack Developer</title>
     <!-- cdns -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- stylesheet -->
@@ -24,8 +24,12 @@
         <div id="spinner"></div>
     </div>
     <header>
-        <div id="head" class="animated slideInDown" style="animation-delay:1.8s;">
-            <div id="title">Ada Hoeg</div>
+        <div id="head" class="animated slideInDown" style="animation-delay:  1.8s;">
+            <div id="title-container">
+                <h1 id="title">
+                    Ada Hoeg
+                </h1>
+            </div>
             <div id="links">
                 <a href="#skills">skills</a>
                 <a href="#work">work</a>
@@ -35,15 +39,20 @@
     </header>
 
     <main>
-        <center>
-            <div id="middle">
-                <div id="tagline" class="animated zo
-                " style="animation: delay 1.8s;">
-                    Lorem, ipsum dolor sit<br>
-                    <button class="btn-one">click!</button>
-                </div>
+    <center>
+        <div id="middle">
+            <div id="tagline-container">
+                <h2 id="tagline">
+                    Full Stack Developer
+                </h2>
+                <p>
+                    View my resume
+                </p>
+                <button class="btn-one">click!</button>
             </div>
-        </center>
+        </div>
+    </center>
+
 
         <div id="portfolio">
             <div id="skills">
