updated stylings for skills and work section

--- a/index.html
+++ b/index.html
@@ -45,18 +45,17 @@
                 <h2 id="tagline">
                     Full Stack Developer
                 </h2>
-                <p>
-                    View my resume
+                <p id="tagline-copy">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi tempore itaque laudantium voluptas. Nihil vitae asperiores distinctio minima illum ex aspernatur modi? Unde animi rem omnis, dolores asperiores deserunt vel.
                 </p>
-                <button class="btn-one">click!</button>
+                <button class="btn-one">view resume</button>
             </div>
         </div>
     </center>
 
-
         <div id="portfolio">
             <div id="skills">
-                <h2>skills.</h2>
+                <h3>skills.</h3>
                 <div>
                     <p class="p-copy">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, illo dolores ex quidem perspiciatis eveniet, suscipit aspernatur, hic vel quasi nemo dolorum? Nemo in voluptatem sunt animi eum dicta ducimus.
@@ -65,7 +64,7 @@
             </div>
 
             <div id="work">
-                <h1>work</h1>
+                <h3>work.</h3>
 
                 <div class="projects">
                     <h2>project title 1</h2>
