corrected issues with media queries with header section on <=900px screen sizes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ada Hoeg - Full Stack Developer</title>
+    <title>Ada Hoeg - fullstack developer</title>
     <!-- cdns -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css">
@@ -43,10 +43,10 @@
         <div id="middle">
             <div id="tagline-container">
                 <h2 id="tagline">
-                    Full Stack Developer
+                    full stack developer
                 </h2>
                 <p id="tagline-copy">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi tempore itaque laudantium voluptas. Nihil vitae asperiores distinctio minima illum ex aspernatur modi? Unde animi rem omnis, dolores asperiores deserunt vel.
+                    Lorem ipsum dolor
                 </p>
                 <button class="btn-one">view resume</button>
             </div>
@@ -67,7 +67,7 @@
                 <h3>work.</h3>
 
                 <div class="projects">
-                    <h4>project title 1</h4>
+                    <h4>Delve into the Dungeon</h4>
                     <div>
                         <p class="p-copy">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia possimus reprehenderit odit optio facere, rerum
@@ -79,7 +79,7 @@
                     <button class="btn-two">code</button>
                 </div>
                 <div class="project">
-                    <h4>project title 2</h4>
+                    <h4>My Little Pokedex</h4>
                     <div>
                         <p class="p-copy">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia possimus reprehenderit odit optio facere, rerum
