changed resume button to styled link. Added a container to house the button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div id="loading">
         <div id="spinner"></div>
     </div>
+    <!-- header -->
     <header>
         <div id="head" class="animated slideInDown" style="animation-delay:  1.8s;">
             <div id="title-container">
@@ -37,18 +38,21 @@
             </div>
         </div>
     </header>
-
+    <!-- main section -->
     <main>
     <center>
         <div id="middle">
             <div id="tagline-container">
                 <h2 id="tagline">
-                    full stack developer
+                    fullstack developer
                 </h2>
                 <p id="tagline-copy">
                     Lorem ipsum dolor
                 </p>
-                <button class="btn-one">view resume</button>
+                <div id="button-container">
+                    <a href="" target="_blank" rel="noopener noreferrer" class="btn-one">view resume.
+                    </a>
+                </div>
             </div>
         </div>
     </center>
