Added a container for skills with tech skills. Styled the items within the container

--- a/index.html
+++ b/index.html
@@ -60,13 +60,21 @@
         <div id="portfolio">
             <div id="skills">
                 <h3>skills.</h3>
-                <div>
-                    <p class="p-copy">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, illo dolores ex quidem perspiciatis eveniet, suscipit aspernatur, hic vel quasi nemo dolorum? Nemo in voluptatem sunt animi eum dicta ducimus.
-                    </p>
+                <p class="p-copy">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit accusantium illo quod repellat aperiam perspiciatis a voluptates! Quas reiciendis tempora nam quos minus doloribus ut facere maxime iste similique. Facilis?
+                </p>
+                <div id="tech-container">
+                    <i class="devicon-python-plain-wordmark colored"></i>
+                    <i class="devicon-django-plain-wordmark"></i>
+                    <i class="devicon-html5-plain-wordmark colored"></i>
+                    <i class="devicon-css3-plain-wordmark colored"></i>
+                    <i class="devicon-javascript-plain colored"></i>
+                    <i class="devicon-jquery-plain-wordmark colored"></i>
+                    <i class="devicon-react-original-wordmark colored"></i>
+                    <i class="devicon-mysql-plain-wordmark colored"></i>
                 </div>
             </div>
-
+            <!-- work -->
             <div id="work">
                 <h3>work.</h3>
 
