--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
                     Ada Hoeg
                 </h1>
             </div>
-            <div id="links">
-                <a href="#skills">skills</a>
-                <a href="#work">work</a>
-                <a href="#contact">contact</a>
-            </div>
+            <!-- nav -->
+            <nav>
+                <div id="links">
+                    <a href="#skills">skills</a>
+                    <a href="#work">work</a>
+                    <a href="#contact">contact</a>
+                </div>
+            </nav>
         </div>
     </header>
     <!-- main section -->
