--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./assets/img/portfolio-favicon.png" type="png">
     <!-- scripts -->
     <script src="script.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
