updated favicon to different design

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
     <!-- favicon -->
-    <link rel="shortcut icon" href="./assets/img/portfolio-favicon.png" type="png">
+    <link rel="shortcut icon" href="./assets/img/portfolio-favicon.jpg" type="jpeg">
     <!-- scripts -->
     <script src="script.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
