fixed issue with devicons moving off screen on smaller screen sizes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <p class="p-copy">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit accusantium illo quod repellat aperiam perspiciatis a voluptates! Quas reiciendis tempora nam quos minus doloribus ut facere maxime iste similique. Facilis?
                 </p>
-                <div id="tech-container">
+                <div class="tech-container">
                     <i class="devicon-python-plain-wordmark colored"></i>
                     <i class="devicon-django-plain-wordmark"></i>
                     <i class="devicon-html5-plain-wordmark colored"></i>
