Altered semantic elements: aside and main. Changed project titles

--- a/index.html
+++ b/index.html
@@ -43,30 +43,34 @@
             </nav>
         </div>
     </header>
-    <!-- main section -->
-    <main>
-    <center>
-        <div id="middle">
-            <div id="tagline-container">
-                <h2 id="tagline">
-                    fullstack developer
-                </h2>
-                <p id="tagline-copy">
-                    Lorem ipsum dolor
-                </p>
-                <div id="button-container">
-                    <a href="" target="_blank" rel="noopener noreferrer" class="btn-one">view resume.
-                    </a>
+    <!-- aside -->
+    <aside>
+        <center>
+            <div id="middle">
+                <div id="tagline-container">
+                    <h2 id="tagline">
+                        fullstack developer
+                    </h2>
+                    <p id="tagline-copy">
+                        Lorem ipsum dolor
+                    </p>
+                    <div id="button-container">
+                        <a href="" target="_blank" rel="noopener noreferrer" class="btn-one">view resume.
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </center>
-
+        </center>
+    </aside>
+    <!-- main -->
+    <main>
         <div id="portfolio">
+            <!-- skills -->
             <div id="skills">
                 <h3>skills.</h3>
                 <p class="p-copy">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit accusantium illo quod repellat aperiam perspiciatis a voluptates! Quas reiciendis tempora nam quos minus doloribus ut facere maxime iste similique. Facilis?
+                    Hello there - nice to meet you! My name is Ada, and I'm a software developer and QA engineer based out of
+                    Toronto, Canada!
                 </p>
                 <div class="tech-container">
                     <i class="devicon-python-plain-wordmark colored"></i>
@@ -81,38 +85,43 @@
             </div>
             <!-- work -->
             <div id="work">
-                <h3>work.</h3>
-
+                <h3>work.</h3>       
                 <div class="projects">
-                    <h4>Delve into the Dungeon</h4>
+                    <h4>Clean React portfolio</h4>
                     <div>
                         <p class="p-copy">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia possimus reprehenderit odit optio facere, rerum
-                            repellendus natus distinctio mollitia quos asperiores expedita commodi delectus voluptatibus quia in vel laborum
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia possimus reprehenderit odit optio
+                            facere, rerum
+                            repellendus natus distinctio mollitia quos asperiores expedita commodi delectus voluptatibus quia in
+                            vel laborum
                             numquam.
                         </p>
                     </div>
                     <button class="btn-one">live</button>
                     <button class="btn-two">code</button>
                 </div>
-                <div class="project">
+                <div class="projects">
+                    <h4>Delve Into the Dungeon</h4>
+                    <div>
+                        <p class="p-copy">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia possimus reprehenderit odit optio
+                            facere, rerum
+                            repellendus natus distinctio mollitia quos asperiores expedita commodi delectus voluptatibus quia in
+                            vel laborum
+                            numquam.
+                        </p>
+                    </div>
+                    <button class="btn-one">live</button>
+                    <button class="btn-two">code</button>
+                </div>
+                <div class="projects">
                     <h4>My Little Pokedex</h4>
                     <div>
                         <p class="p-copy">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia possimus reprehenderit odit optio facere, rerum
-                            repellendus natus distinctio mollitia quos asperiores expedita commodi delectus voluptatibus quia in vel laborum
-                            numquam.
-                        </p>
-                    </div>
-                    <button class="btn-one">live</button>
-                    <button class="btn-two">code</button>
-                </div>
-                    <div class="project">
-                    <h4>project title 3</h4>
-                    <div>
-                        <p class="p-copy">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia possimus reprehenderit odit optio facere, rerum
-                            repellendus natus distinctio mollitia quos asperiores expedita commodi delectus voluptatibus quia in vel laborum
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia possimus reprehenderit odit optio
+                            facere, rerum
+                            repellendus natus distinctio mollitia quos asperiores expedita commodi delectus voluptatibus quia in
+                            vel laborum
                             numquam.
                         </p>
                     </div>
@@ -120,22 +129,23 @@
                     <button class="btn-two">code</button>
                 </div>
             </div>
-
+        
             <div id="contact">
                 <h3>contact</h3>
                 <div id="details">
-                <!-- github -->
+                    <!-- github -->
                     <a href="https://github.com/flovelace" target="_blank" rel="noopener noreferrer" class="btn-social">
-                    <i class="fa-brands fa-github fa-2xl fa-fade"
-                        style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6; color: #cecece;"></i></a>
-                <!-- github -->
+                        <i class="fa-brands fa-github fa-2xl fa-fade"
+                            style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6; color: #cecece;"></i></a>
+                    <!-- linkedin -->
                     <a href="https://www.linkedin.com/in/adahoeg/" target="_blank" rel="noopener noreferrer" class="btn-social">
-                    <i class="fa-brands fa-linkedin fa-2xl fa-fade"
-                        style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6; color: #cecece;"></i></a>
+                        <i class="fa-brands fa-linkedin fa-2xl fa-fade"
+                            style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6; color: #cecece;"></i></a>
                 </div>
             </div>
         </div>
     </main>
+    <!-- footer -->
     <footer>
         designed and developed by Ada Hoeg
     </footer>
