removed divs and replaced with semantic sections

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <main>
         <div id="portfolio">
             <!-- skills -->
-            <div id="skills">
+            <section id="skills">
                 <h3>skills.</h3>
                 <p class="p-copy">
                     Hello there - nice to meet you! My name is Ada, and I'm a software developer and QA engineer based out of
@@ -82,9 +82,9 @@
                     <i class="devicon-react-original-wordmark colored"></i>
                     <i class="devicon-mysql-plain-wordmark colored"></i>
                 </div>
-            </div>
+            </section>
             <!-- work -->
-            <div id="work">
+            <section id="work">
                 <h3>work.</h3>       
                 <div class="projects">
                     <h4>Clean React portfolio</h4>
@@ -128,21 +128,25 @@
                     <button class="btn-one">live</button>
                     <button class="btn-two">code</button>
                 </div>
-            </div>
+            </section>
         
-            <div id="contact">
+            <section id="contact">
                 <h3>contact</h3>
                 <div id="details">
                     <!-- github -->
                     <a href="https://github.com/flovelace" target="_blank" rel="noopener noreferrer" class="btn-social">
                         <i class="fa-brands fa-github fa-2xl fa-fade"
-                            style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6; color: #cecece;"></i></a>
+                            style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6; color: #cecece;">
+                        </i>
+                    </a>
                     <!-- linkedin -->
                     <a href="https://www.linkedin.com/in/adahoeg/" target="_blank" rel="noopener noreferrer" class="btn-social">
                         <i class="fa-brands fa-linkedin fa-2xl fa-fade"
-                            style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6; color: #cecece;"></i></a>
+                            style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6; color: #cecece;">
+                        </i>
+                    </a>
                 </div>
-            </div>
+            </section>
         </div>
     </main>
     <!-- footer -->
