--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </main>
     <!-- footer -->
     <footer>
-        designed and developed by Ada Hoeg
+        <p id="year"></p>
     </footer>
     
 </body>
