updated element id from head to heading

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <!-- header -->
     <header>
-        <div id="head" class="animated slideInDown" style="animation-delay:  1.8s;">
+        <div id="heading" class="animated slideInDown" style="animation-delay:  1.8s;">
             <div id="title-container">
                 <h1 id="title">
                     Ada Hoeg
@@ -151,7 +151,7 @@
     </main>
     <!-- footer -->
     <footer>
-        <p id="year"></p>
+        <p id="footer-copy"></p>
     </footer>
     
 </body>
