updated media queries for 1265px screen size

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </section>
         
             <section id="contact">
-                <h3>contact</h3>
+                <h3>contact.</h3>
                 <div id="details">
                     <!-- github -->
                     <a href="https://github.com/flovelace" target="_blank" rel="noopener noreferrer" class="btn-social">
