--- a/index.html
+++ b/index.html
@@ -133,18 +133,24 @@
             <section id="contact">
                 <h3>contact.</h3>
                 <div id="details">
-                    <!-- github -->
-                    <a href="https://github.com/flovelace" target="_blank" rel="noopener noreferrer" class="btn-social">
-                        <i class="fa-brands fa-github fa-2xl fa-fade"
-                            style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6; color: #cecece;">
-                        </i>
-                    </a>
-                    <!-- linkedin -->
-                    <a href="https://www.linkedin.com/in/adahoeg/" target="_blank" rel="noopener noreferrer" class="btn-social">
-                        <i class="fa-brands fa-linkedin fa-2xl fa-fade"
-                            style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6; color: #cecece;">
-                        </i>
-                    </a>
+                    <ul class="socials-list">
+                        <!-- github -->
+                        <li class="socials-list-item">
+                            <a href="https://github.com/flovelace" target="_blank" rel="noopener noreferrer"    class="btn-social">
+                                <i class="fa-brands fa-github fa-2xl fa-fade"
+                                style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6; color: #cecece;">
+                                </i>&nbsp;Github                               
+                            </a>
+                        </li>
+                        <!-- linkedIn -->
+                        <li class="socials-list-item">
+                            <a href="https://www.linkedin.com/in/adahoeg/" target="_blank" rel="noopener noreferrer" class="btn-social">
+                                <i class="fa-brands fa-linkedin fa-2xl fa-fade"
+                                style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6; color: #cecece;">
+                                </i>&nbsp;LinkedIn
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </section>
         </div>
