added resume to 'view resume' button

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ada Hoeg - fullstack developer</title>
+    <title>Ada Hoeg - web developer</title>
     <!-- cdns -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css">
@@ -49,13 +49,13 @@
             <div id="middle">
                 <div id="tagline-container">
                     <h2 id="tagline">
-                        fullstack developer
+                        web developer
                     </h2>
                     <p id="tagline-copy">
                         Lorem ipsum dolor
                     </p>
                     <div id="button-container">
-                        <a href="" target="_blank" rel="noopener noreferrer" class="btn-one">view resume.
+                        <a href="./assets/files/Ada-Hoeg-Resume.pdf" target="_blank" rel="noopener noreferrer" class="btn-one">view resume.
                         </a>
                     </div>
                 </div>
